--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>포트폴리오 - 이름</title>
+  <title>AboutMe - ET Kang</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -43,8 +43,8 @@
 </head>
 <body>
   <header>
-    <h1>홍길동</h1>
-    <p>웹 개발자 | 디자인에 관심 많은 프론트엔드</p>
+    <h1>Euntaek Kang</h1>
+    <p>Sogang Univ. Department of Physics</p>
   </header>
 
   <section>
@@ -76,12 +76,13 @@
 
   <section>
     <h2>연락처</h2>
-    <p>Email: your.email@example.com</p>
-    <p>GitHub: <a href="https://github.com/your-username" target="_blank">github.com/your-username</a></p>
+    <p>Email: etkang03@gmail.com</p>
+    <p>Email: ket16383@sogang.ac.kr</p>
+    <p>GitHub: <a href="https://github.com/physicist03" target="_blank">github.com/physicist03</a></p>
   </section>
 
   <footer>
-    &copy; 2025 홍길동. 모든 권리 보유.
+    &copy; Copyright © 2025. Eun Taek Kang. All Rights Reserved.
   </footer>
 </body>
 </html>
